# LinSight

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  Justfile  PLAN.md  README.md  _review_diff.txt  about.hbs  about.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml  security.yml
apps/linsight-gui/: .qmlls.ini  Cargo.toml  build.rs
apps/linsight-gui/i18n/: linsight_de.qm  linsight_de.ts  linsight_en.qm  linsight_en.ts  linsight_ja.qm  linsight_ja.ts
apps/linsight-gui/qml/: AboutPage.qml  AlertsPage.qml  CanvasEditorPage.qml  CategoryPage.qml  CreditsPage.qml  DashWindow.qml  DashboardViewPage.qml  DesignTokens.qml  GplLicenseDialog.qml  HardwarePage.qml  HistoryChart.qml  HistoryDialog.qml  LicensesPage.qml  Main.qml  NavItem.qml  NetworkCard.qml  NetworkMetric.qml  NetworkPage.qml  NewDashboardDialog.qml  OverviewPage.qml  ProcessesPage.qml  SensorTile.qml  SettingsCard.qml  SettingsPage.qml  Shared.js  StartPagePicker.qml  StorageSectionView.qml  ThemePicker.qml  ThemedButton.qml  ThemedComboBox.qml  ThemedTextField.qml
apps/linsight-gui/src/: client.rs  icon_theme.cpp  icon_theme.rs  main.rs  screenshot.cpp  screenshot.rs  translator.cpp  translator.rs  workspace.rs
apps/linsight-gui/src/qobjects/: alert_model.rs  dashboards_model.rs  hardware_model.rs  history_model.rs  hosts_model.rs  mod.rs  overview_model.rs  preferences_model.rs  rpc_worker.rs  workspace_handle.rs
apps/linsight-tunnel/: Cargo.toml  README.md
apps/linsight-tunnel/src/: main.rs
apps/linsight-tunnel/tests/: mtls_smoke.rs
apps/linsightd/: Cargo.toml
apps/linsightd/src/: alerts.rs  hardware.rs  history.rs  main.rs  nickname_store.rs  plugin_host.rs  prom.rs  runtime.rs  scheduler.rs
apps/linsightd/src/transport/: mod.rs  unix.rs
apps/linsightd/tests/: handshake.rs
apps/linsightd/tests/harness/: mod.rs
assets/: README.md
crates/linsight-cli/: Cargo.toml
crates/linsight-cli/src/: main.rs
crates/linsight-cli/src/commands/: alert.rs  db.rs  history.rs  list.rs  mod.rs  plugin.rs  read.rs  watch.rs
crates/linsight-cli/tests/: list.rs  read.rs  socket.rs  watch.rs
crates/linsight-cli/tests/helpers/: mod.rs
crates/linsight-core/: Cargo.toml  README.md
crates/linsight-core/benches/: types.rs
crates/linsight-core/src/: atomic_write.rs  dashboard.rs  error.rs  hardware.rs  lib.rs  paths.rs  time.rs  types.rs
crates/linsight-plugin-sdk/: Cargo.toml  README.md
crates/linsight-plugin-sdk/src/: export.rs  lib.rs  manifest.rs  mirror.rs  pciids.rs  plugin.rs
crates/linsight-plugin-sdk/tests/: dynamic_load.rs
crates/linsight-plugin-sdk/tests/fixtures/: mini-pci.ids
crates/linsight-protocol/: Cargo.toml
crates/linsight-protocol/benches/: encode_decode.rs
crates/linsight-protocol/src/: frame.rs  lib.rs  messages.rs
crates/linsight-sensors/amdgpu/: Cargo.toml
crates/linsight-sensors/amdgpu/src/: lib.rs  plugin.rs
crates/linsight-sensors/containers/: Cargo.toml
crates/linsight-sensors/containers/src/: lib.rs
crates/linsight-sensors/cpu/: Cargo.toml
crates/linsight-sensors/cpu/src/: lib.rs  plugin.rs  proc_stat.rs
crates/linsight-sensors/disk/: Cargo.toml
crates/linsight-sensors/disk/src/: lib.rs  plugin.rs
crates/linsight-sensors/fs/: Cargo.toml
crates/linsight-sensors/fs/src/: lib.rs  plugin.rs
crates/linsight-sensors/hwmon/: Cargo.toml
crates/linsight-sensors/hwmon/src/: lib.rs  plugin.rs
crates/linsight-sensors/i915/: Cargo.toml
crates/linsight-sensors/i915/src/: lib.rs  plugin.rs
crates/linsight-sensors/mem/: Cargo.toml
crates/linsight-sensors/net/: Cargo.toml
crates/linsight-sensors/nvme/: Cargo.toml
crates/linsight-sensors/nvme/src/: lib.rs
crates/linsight-sensors/nvml/: Cargo.toml
crates/linsight-sensors/nvml/src/: lib.rs
crates/linsight-sensors/proc/: Cargo.toml
crates/linsight-sensors/smart/: Cargo.toml
crates/linsight-sensors/sock/: Cargo.toml
crates/linsight-sensors/sock/src/: lib.rs
crates/linsight-sensors/system/: Cargo.toml
crates/linsight-sensors/system/src/: lib.rs  plugin.rs
crates/linsight-sensors/systemd/: Cargo.toml
crates/linsight-sensors/xe/: Cargo.toml
crates/linsight-sensors/xe/src/: fdinfo.rs  lib.rs  plugin.rs  sysfs.rs
crates/linsight-sensors/zram/: Cargo.toml
docs/: SECURITY.md  alerts.md  architecture.md  build-and-test.md  credits-third-party.md  perf-budgets.md  plugin-sandbox.md  plugin-sdk.md  releasing.md  security.md  third-party-notices.md
docs/adr/: 0001-plugin-abi-stabby-deferral.md  0002-plugin-abi-v4-hardware-manifest.md
docs/superpowers/plans/: 2026-05-25-code-review-punch-list.md  2026-05-25-commit-review-punch-list.md  2026-05-25-foundation-cli-mvp.md  2026-05-25-gui-overview-mvp.md  2026-05-25-phase-1-completion-notes.md  2026-05-25-phase-2-completion-notes.md  2026-05-25-phases-3-10-completion-notes.md  2026-05-25-phases-roadmap.md  2026-05-25-v0.3.0-followups-completion-notes.md  2026-05-26-hardware-page-and-nicknames.md  2026-05-26-themes-and-custom-dashboards-plan.md  2026-05-31-storage-nested-mounts.md  2026-06-01-github-actions-ci-release.md
examples/echo-plugin/: Cargo.toml
examples/echo-plugin/src/: lib.rs
examples/init-count-plugin/: Cargo.toml
examples/legacy-init-count-plugin/: Cargo.toml
examples/legacy-init-count-plugin/src/: lib.rs
packaging/: com.visorcraft.LinSight.desktop  com.visorcraft.LinSight.metainfo.xml  io.visorcraft.LinSight.desktop  io.visorcraft.LinSight.metainfo.xml
packaging/appimage/: AppImageBuilder.yml
packaging/arch/: PKGBUILD  PKGBUILD.local
packaging/arch-v3/: PKGBUILD  PKGBUILD.local
packaging/debian/: changelog  control  copyright  rules
packaging/fedora/: Containerfile.fedora44  README.md  build-in-container.sh  container-entrypoint.sh  linsight.spec
packaging/flatpak/: com.visorcraft.LinSight.yml  io.visorcraft.LinSight.yml
packaging/opensuse/: linsight.spec
packaging/systemd/: linsight.service
scripts/: build_appimage.sh  build_appimage_in_container.sh  dev_render_icons.sh  dev_screenshot.sh  gui_smoke.sh
(+20 files in other folders)
