# SPDX-FileCopyrightText: 2026 VisorCraft LLC
# SPDX-License-Identifier: GPL-3.0-only
[workspace]
members = [
    "apps/linsight-gui",
    "apps/linsight-tunnel",
    "apps/linsightd",
    "crates/linsight-cli",
    "crates/linsight-core",
    "crates/linsight-protocol",
    "crates/linsight-plugin-sdk",
    "crates/linsight-sensors/cpu",
    "crates/linsight-sensors/mem",
    "crates/linsight-sensors/net",
    "crates/linsight-sensors/nvme",
    "crates/linsight-sensors/nvml",
    "crates/linsight-sensors/xe",
    "crates/linsight-sensors/system",
    "crates/linsight-sensors/amdgpu",
    "crates/linsight-sensors/disk",
    "crates/linsight-sensors/hwmon",
    "crates/linsight-sensors/fs",
    "crates/linsight-sensors/proc",
    "crates/linsight-sensors/zram",
    "crates/linsight-sensors/i915",
    "crates/linsight-sensors/systemd",
    "crates/linsight-sensors/sock",
    "crates/linsight-sensors/containers",
    "examples/echo-plugin",
]
resolver = "3"

[workspace.package]
version = "1.5.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/visorcraft/linsight"
authors = ["VisorCraft LLC"]
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
postcard = { version = "1.0", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
evalexpr = "11"
libloading = "0.8"
notify-rust = "4"
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
serde_json = "1.0"
signal-hook = "0.3"
stabby = { version = "36", features = ["libloading"] }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
ureq = { version = "3", features = ["rustls"] }
tempfile = "3.15"
assert_cmd = "2.0"
escargot = "0.5"
predicates = "3.1"
proptest = "1.7"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }

# Tunnel + future async surfaces. Versioned here so the workspace can
# share one tokio / rustls revision across crates as the async surface
# expands (today only `linsight-tunnel` uses them).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
rustls-pemfile = "2"
rustls-pki-types = "1"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = 3

# TEMP: verifying upstream fix for cxx-qt issue (rcc "potential duplicate
# alias detected: 'qmldir'" warning during build). Remove this patch
# table once the fix is merged into a published crate version.
[patch.crates-io]
qt-build-utils = { path = "/work/repos/cxx-qt-fork/crates/qt-build-utils" }
