# SPDX-FileCopyrightText: 2026 VisorCraft LLC
# SPDX-License-Identifier: GPL-3.0-only
[package]
publish = ["crates-io"]
name = "linsight-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "LinSight shared types and pure-logic primitives."
repository.workspace = true
documentation = "https://docs.rs/linsight-core"
readme = "README.md"
keywords = ["linsight", "monitoring", "sensors"]
include = ["src/**", "benches/**", "README.md"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "types"
harness = false
