[package]
name = "linsight-sensors-disk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Block device I/O sensor backend for LinSight."

[dependencies]
linsight-core = { path = "../../linsight-core", version = "1.4.0" }
linsight-plugin-sdk = { path = "../../linsight-plugin-sdk", version = "1.4.0" }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
