[package]
name = "linsight-sensors-fs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Filesystem usage sensor backend for LinSight."

[dependencies]
linsight-core = { path = "../../linsight-core", version = "1.4.0" }
linsight-plugin-sdk = { path = "../../linsight-plugin-sdk", version = "1.4.0" }
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }